[gd_scene load_steps=2 format=3 uid="uid://cs4pdnl4db0o1"]

[ext_resource type="Script" path="res://Colliders/hurt_box.gd" id="1_ueo7v"]

[node name="HurtBox" type="Area3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_ueo7v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="invincibility_ended" from="." to="." method="_on_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_invincibility_started"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
